--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ var _hmt = _hmt || [];
 			<img src="/img/avatar.png" class="js-avatar">
 		</a>
 		<hgroup>
-		  <h1 class="header-author"><a href="/">Zhisheng Tian</a></h1>
-		</hgroup>
+		  <h1 class="header-author"><a href="/">李文香
+/hgroup>
 		
 		<p class="header-subtitle">永远不要跟别人比幸运，我从来没想过我比别人幸运，我也许比他们更有毅力，在最困难的时候，他们熬不住了，我可以多熬一秒钟、两秒钟。</p>
 		
@@ -126,7 +126,7 @@ var _hmt = _hmt || [];
 				<img src="/img/avatar.png" class="js-avatar">
 			</div>
 			<hgroup>
-			  <h1 class="header-author js-header-author">Zhisheng Tian</h1>
+			  <h1 class="header-author js-header-author">李文香</h1>
 			</hgroup>
 			
 			<p class="header-subtitle"><i class="icon icon-quo-left"></i>永远不要跟别人比幸运，我从来没想过我比别人幸运，我也许比他们更有毅力，在最困难的时候，他们熬不住了，我可以多熬一秒钟、两秒钟。<i class="icon icon-quo-right"></i></p>
